Day3/Day_3/.metadata/.plugins/org.eclipse.cdt.ui/Day_3.11.build.log
19:50:35 **** Incremental Build of configuration Debug for project Day_3.11 ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:8:6: error: non-static declaration of 'num1' follows static declaration
        int num1 = 30;  //error: redefinition of 'num1'
            ^
../src/Main.cpp:4:13: note: previous definition is here
        static int num1 = 10;
                   ^
1 error generated.
make: *** [src/Main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

19:50:35 Build Failed. 2 errors, 0 warnings. (took 452ms)

